--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,10 @@
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 	</properties>
+	
+	
 
 	<dependencies>
 		<dependency>
@@ -46,4 +48,5 @@
 		</plugins>
 	</build>
 
+	<packaging>war</packaging>
 </project>
